# hush

./: CMakeLists.txt  README.md  genman.sh  make.sh
.github/ISSUE_TEMPLATE/: config.yml
src/: faketty.1  faketty.c  hush  hush.1
tests/: test001  test002  test003
